Added quality filter
